--- a/client/package.json
+++ b/client/package.json
@@ -3,14 +3,21 @@
    "version": "0.1.0",
    "private": true,
    "dependencies": {
+      "@reduxjs/toolkit": "^1.8.1",
       "@testing-library/jest-dom": "^5.14.1",
       "@testing-library/react": "^12.0.0",
       "@testing-library/user-event": "^13.2.1",
       "antd": "^4.19.5",
+      "axios": "^0.26.1",
+      "formik": "^2.2.9",
+      "query-string": "^7.1.1",
       "react": "^17.0.2",
       "react-dom": "^17.0.2",
+      "react-redux": "^7.2.8",
       "react-scripts": "5.0.0",
-      "web-vitals": "^2.1.0"
+      "uuid": "^8.3.2",
+      "web-vitals": "^2.1.0",
+      "yup": "^0.32.11"
    },
    "scripts": {
       "start": "react-scripts start",
