--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,8 @@
    "version": "0.1.0",
    "private": true,
    "dependencies": {
+      "@ant-design/icons": "^4.7.0",
+      "@fortawesome/fontawesome-free": "^6.1.1",
       "@reduxjs/toolkit": "^1.8.1",
       "@testing-library/jest-dom": "^5.14.1",
       "@testing-library/react": "^12.0.0",
