--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
       "sass": "^1.50.0",
       "slick-carousel": "^1.8.1",
       "swiper": "^8.1.0",
+      "use-react-router-breadcrumbs": "^3.2.1",
       "uuid": "^8.3.2",
       "web-vitals": "^2.1.0"
    },
